# quality-platform

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vite.portable.config.ts
.claude/: launch.json
.github/workflows/: build-windows.yml  ci.yml  pages.yml  release.yml
scripts/: msa-comparison-report.mjs
src/: App.tsx  dataModel.ts  index.css  main.tsx  pwa.d.ts  version.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/core/: advancedSpc.ts  anova.ts  aql.ts  aqlSwitch.ts  attr.ts  basicMath.ts  boxcox.ts  calculator.ts  capability.ts  capabilityAssessment.ts  csv.ts  descriptive.ts  doe.ts  downsample.ts  formula.ts  gage.ts  gageData.ts  index.ts  model.ts  normality.ts  regression.ts  sampleData.ts  spc.ts  spcData.ts  stages.ts  ttest.ts
src/core/__tests__/: advanced.test.ts  aqlFormal.test.ts  aqlPer100.test.ts  aqlStateSafety.test.ts  batchD.test.ts  batchF.test.ts  capabilityAssessment.test.ts  descriptive.test.ts  (+21 more)
src/platform/: activeAnalysisReport.tsx  adapter.ts  analysisReportModel.ts  calendarDate.ts  htmlReport.tsx  importLimits.ts  mes.ts  officeExport.tsx  project.ts  projectSummary.ts  report.ts  reportLabels.ts  svgToPng.ts  xlsxExport.ts  xlsxImport.ts
src/store/: analyses.ts  appStore.ts  dataStore.ts  fishboneStore.ts  quarantine.ts  sessionLog.ts
src/ui/: ErrorBoundary.tsx  ReportCard.tsx  common.tsx  icons.tsx  pagesMeta.ts  reportData.ts  tokens.ts
(+96 files in other folders)
