[package]
name = "quality-platform"
version = "1.15.0"
description = "质量分析平台 — 类 Minitab 质量管理工具"
authors = ["Quality Engineering"]
edition = "2021"

[lib]
name = "quality_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
strip = true
